# ChangeLog for schedule

*schedule-v7.5.3_p1:
	Martin Väth <martin at mvath.de>:
	- schedule-tmux: Treat 0 and - as false only if no symbol follows

*schedule-v7.5.3:
	Martin Väth <martin at mvath.de>:
	- Fix a quoting problem which caused with pie on amd64 the error:
	  Hexadecimal number > 0xffffffff non-portable at (eval 1) line 1

*schedule-v7.5.2:
	Martin Väth <martin at mvath.de>:
	- schedule-tmux --remain: Avoid set-remain-on-exit (for >=tmux-2.4)

*schedule-v7.5.1:
	Martin Väth <martin at mvath.de>:
	- zsh completion: Fix return value (needed for >=zsh-5.3)

*schedule-v7.5.0_p1:
	Martin Väth <martin at mvath.de>:
	- systemd: Add security options of systemd-232

*schedule-v7.5.0:
	Martin Väth <martin at mvath.de>:
	- Rename lib/ -> shared/schedule/ in distribution and path search
	- systemd: Cleanly stop, hoping that new timeout fixes the issues
	- openrc: Decrease suggested timeout (symmetric to systemd)
	- schedule man: Fix marking in SYNOPSIS
	- man: Output in utf-8
	- README: Explain file/server version numbering/compatibility

*schedule-v7.4.0:
	Martin Väth <martin at mvath.de>:
	- Use timeout also when opening the socket (previously, e.g.
	  an iptables block could have caused a deadlock)
	- Use timeout also when sending
	- Use additional alarm protection when sending and receiving
	- Clarify description of --timeout on manpages
	- Improve negative test for SCHEDULE_REMAIN
	- openrc: Explicitly set timeout for stopping in conf.d

*schedule-v7.3.0:
	Martin Väth <martin at mvath.de>:
	- Improve security in provided systemd unit

*schedule-v7.2.2:
	Martin Väth <martin at mvath.de>:
	- Syntactic micro-optimizations
	- Allow server of v7.2.0

*schedule-v7.2.1:
	Martin Väth <martin at mvath.de>:
	- Fix "core dumped" message

*schedule-v7.2.0:
	Martin Väth <martin at mvath.de>:
	- Increase magic checksum for password verification to 496 bit
	  to be reasonably secure against DOS attacks with random data

*schedule-v7.1.1:
	Martin Väth <martin at mvath.de>: